[project]
name = "pretix-cashfree"
dynamic = ["version"]
description = "Cashfree PG"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Diptangshu Chakrabarty", email = "cdiptangshu@gmail.com"},
]
maintainers = [
    {name = "Diptangshu Chakrabarty", email = "cdiptangshu@gmail.com"},
]

dependencies = [
    "cashfree_pg"
]

[project.entry-points."pretix.plugin"]
pretix_cashfree = "pretix_cashfree:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "GitHub repository URL"
repository = "GitHub repository URL"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_cashfree.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
